Bug#17721 Test 'exampledb' hangs on Windows - Removed ifdefs from handler class - The handler class is an external interface to dynamically loadable storage engine and should not be changed by defines. This is especially important for the virtual functions.